[package]
name = "graph_xpcom"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
nserror = { version = "0.1.0", path = "../../../xpcom/rust/nserror" }
nsstring = { version = "0.1.0", path = "../../../xpcom/rust/nsstring" }
xpcom = { version = "0.1.0", path = "../../../xpcom/rust/xpcom" }
xpcom_async = { version = "0.1.0", path = "../xpcom_async" }
thin-vec = { version = "0.2.12", features = ["gecko-ffi"] }
