[package]
name = "mailnews_ui_glue"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
xpcom = { path = "../../../xpcom/rust/xpcom" }
nsstring = { path = "../../../xpcom/rust/nsstring" }
nserror = { path = "../../../xpcom/rust/nserror" }
thin-vec = { version = "0.2.12", features = ["gecko-ffi"] }
