[package]
name = "moz_http"
version = "0.1.0"
edition = "2021"

[lib]
name = "moz_http"

[dependencies]
mozilla-central-workspace-hack = { version = "0.1", features = [], optional = true }
xpcom = { path = "../../../xpcom/rust/xpcom" }
nsstring = { path = "../../../xpcom/rust/nsstring" }
nserror = { path = "../../../xpcom/rust/nserror" }
xpcom_async = { path = "../xpcom_async" }

cstr = "0.2"
url = "2.5"
thiserror = "1.0.56"
