[package]
name = "moz_http"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[lib]
name = "moz_http"

[dependencies]
mozilla-central-workspace-hack = { version = "0.1", features = [], optional = true }
xpcom = { path = "../../../xpcom/rust/xpcom" }
nsstring = { path = "../../../xpcom/rust/nsstring" }
nserror = { path = "../../../xpcom/rust/nserror" }
xpcom_async_glue = { path = "../xpcom_async_glue" }

cstr = "0.2"
url = "2.5"
thiserror = "1.0.56"
http = "0.2.9"

[lints]
workspace = true
