[package]
name = "ms_graph_tb"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
form_urlencoded = "1.2.2"
http = "0.2.9"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.9"
serde_json = "1.0"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"

[lints.clippy]
# by enabling these lints, we can clean up the generated code a bit using
# cargo clippy --fix
wildcard_imports = "warn"
uninlined_format_args = "warn"
