[package]
name = "protocol_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.21.3"
cstr = "0.2"
fxhash = "0.2.1"
log = "0.4.21"
mail-parser = "0.9.3"
mail-builder = { version = "0.3.2", default-features = false }
moz_http = { version = "0.1.0", path = "../moz_http" }
nserror = { version = "0.1.0", path = "../../../xpcom/rust/nserror" }
nsstring = { version = "0.1.0", path = "../../../xpcom/rust/nsstring" }
thin-vec = { version = "0.2.12", features = ["gecko-ffi"] }
thiserror = "1.0.56"
url = "2.5.0"
uuid = { version = "1.3.0", features = ["v4"] }
xpcom = { version = "0.1.0", path = "../../../xpcom/rust/xpcom" }
xpcom_async = { version = "0.1.0", path = "../xpcom_async" }
